--- a/src/android/res/layout/activity_signature.xml
+++ b/src/android/res/layout/activity_signature.xml
@@ -1,47 +1,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:signature="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".MainActivity">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:signature="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity" >
 
     <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_above="@+id/buttons_container"
-            android:id="@+id/signature_pad_container">
-
-        <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
-                android:layout_marginBottom="8dp"
-                android:layout_above="@+id/signature_pad_description" />
+        android:id="@+id/signature_pad_container"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/buttons_container" >
 
         <TextView
-                android:id="@+id/signature_pad_description"
-                android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/darker_gray"
-                android:layout_marginBottom="16dp"
-                android:layout_alignParentBottom="true"
-                android:text="" />
+            android:id="@+id/signature_pad_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="21dp"
+            android:text=""
+            android:textColor="@android:color/black" />
 
         <com.github.gcacace.signaturepad.views.SignaturePad
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:id="@+id/signature_pad" />
+            android:id="@+id/signature_pad"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/darker_gray" >
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/signature_pad_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="21dp"
+            android:text=""
+            android:textColor="@android:color/black" />
+
     </RelativeLayout>
 
     <LinearLayout
-            android:id="@+id/buttons_container"
-            android:paddingTop="16dp"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true">
+        android:id="@+id/buttons_container"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:paddingTop="16dp" >
 
         <Button
             android:id="@+id/cancel_button"
@@ -52,20 +60,20 @@
             android:text="Cancel" />
 
         <Button
-                android:id="@+id/clear_button"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Clear"
-                android:enabled="false" />
+            android:id="@+id/clear_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:enabled="false"
+            android:text="Clear" />
 
         <Button
-                android:id="@+id/save_button"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Save"
-                android:enabled="false" />
+            android:id="@+id/save_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:enabled="false"
+            android:text="Save" />
     </LinearLayout>
 
 </RelativeLayout>
